--- a/2048.html
+++ b/2048.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="model.js"></script>
 	<script src="view.js"></script>
 	<script src="2048.js"></script>
@@ -10,7 +11,6 @@
 <body>
 	<div class="grid-container">
 		<div id="grid">
-			grid here
 		</div>
 	</div>
 </body>
