--- a/2048.html
+++ b/2048.html
@@ -9,6 +9,15 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+
+	<div class="game-info-container">
+		<div class="section">
+			Score:
+			<div id="score">
+			</div>
+		</div>
+	</div>
+
 	<div class="grid-container">
 		<div id="grid">
 		</div>
