--- a/2048.html
+++ b/2048.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="model.js"></script>
 	<script src="view.js"></script>
 	<script src="2048.js"></script>
@@ -14,6 +14,18 @@
 		<div class="section">
 			Score:
 			<div id="score">
+			</div>
+		</div>
+
+		<div class="section">
+			Moves:
+			<div id="moves">
+			</div>
+		</div>
+
+		<div class="section">
+			Elapsed Time:
+			<div id="time">
 			</div>
 		</div>
 	</div>
