--- a/2048.html
+++ b/2048.html
@@ -11,34 +11,60 @@
 </head>
 <body>
 
-	<div class="game-info-container">
-		<div class="section">
-			Score:
-			<div id="score">
-			</div>
-		</div>
-
-		<div class="section">
-			Moves:
-			<div id="moves">
-			</div>
-		</div>
-
-		<div class="section">
-			Elapsed Time:
-			<div id="time">
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
+	<div class="title-container">
 		<div class="title-numbers-container">
 			<img src="assets/two.png" class="title-numbers"></img>
 			<img src="assets/zero.png" class="title-numbers"></img>
 			<img src="assets/four.png" class="title-numbers"></img>
 			<img src="assets/eight.png" class="title-numbers"></img>
 		</div>
+	</div>
 
+	<div class="game-info-container">
+
+		<div class="game-info-section">
+			GAME INFO
+		</div>
+
+		<div class="game-info-section">
+			Score:
+			<div id="score">
+			</div>
+		</div>
+
+		<div class="game-info-section">
+			Moves:
+			<div id="moves">
+			</div>
+		</div>
+
+		<div class="game-info-section">
+			Elapsed Time:
+			<div id="time">
+			</div>
+		</div>
+	</div>
+
+
+	<div class="analytics-container">
+		<div class="analytics-section">
+			ANALYTICS
+		</div>
+
+		<div class="analytics-section">
+			Edge weight:
+			<div id="edge-weight">
+			</div>
+		</div>
+		
+		<div class="analytics-section">
+			Total weight:
+			<div id="total-weight">
+			</div>
+		</div>
+	</div>
+
+	<div class="controls-grid">
 		<div class="controls">
 			<div class="form-container">
 				<form>
@@ -51,6 +77,8 @@
 				</form>
 			</div>
 		</div>
+
+		<div class="buffer"></div>
 
 		<div class="grid-container">
 			<div id="grid">
